--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,7 +2,7 @@ name : First Test
 on : 
     push : 
         branches : 
-            - main
+            - master
 jobs : 
     first-job:
         runs-on : ubuntu-latest
