--- a/.github/workflows/deployement.yml
+++ b/.github/workflows/deployement.yml
@@ -1,10 +1,6 @@
 name : First Test
-on : 
-    push : 
-        branches : 
-            - master
-    workflow_dispatch :
-      
+on : ["push" , "workflow_dispatch"]
+
 jobs : 
     test:
         runs-on : ubuntu-latest
